--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="Prakhar.jpg"  alt="Prakhar profile picture"></td>
+        <td><img src="images/prakhar.jpg"  alt="Prakhar profile picture"></td>
         <td><h1>Prakhar</h1>
           <p><em>learner at <strong>Udemy</strong></em></p>
       
